refactor: padroniza nomes de métodos e serviços relacionados a Mapa e ajusta transações em MapaManutencaoService
- Renomeia métodos em MapaFacade, controllers e testes para padronizar nomes (ex: obterPorCodigo -> mapaPorCodigo, listar -> todosMapas)
- Ajusta chamadas e mocks em testes para refletir os novos nomes
- Refatora MapaManutencaoService para uso consistente de @Transactional e separação de métodos de leitura e escrita
- Remove métodos duplicados e centraliza lógica de manipulação de mapas, atividades, competências e conhecimentos
- Melhora clareza e coesão dos serviços de visualização e contexto de subprocesso
- Ajusta EmailServiceTest e ProcessoNotificacaoServiceTest para refletir mudanças em dependências e mocks