@@ -2,7 +2,6 @@ package sgc.seguranca.login;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -25,7 +24,6 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-@Tag("unit")
 @DisplayName("LoginFacade")
 class LoginFacadeTest {
 
@@ -195,6 +193,6 @@ class LoginFacadeTest {
 
         List<PerfilUnidadeDto> result = loginFacade.autorizar("123");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).perfil()).isEqualTo(Perfil.GESTOR);
+        assertThat(result.getFirst().perfil()).isEqualTo(Perfil.GESTOR);
     }
 }
